@@ -736,9 +736,9 @@ void MainWorker::HandleAutomaticBackups()
 		std::string sbackup_DirM = backup_DirM.str();
 
 		//create folders if they not exists
-		mkdir_deep(sbackup_DirH.c_str(),755);
-		mkdir_deep(sbackup_DirD.c_str(),755);
-		mkdir_deep(sbackup_DirM.c_str(),755);
+		mkdir_deep(sbackup_DirH.c_str(),777);
+		mkdir_deep(sbackup_DirD.c_str(),777);
+		mkdir_deep(sbackup_DirM.c_str(),777);
     	
 		time_t now = mytime(NULL);
 		struct tm tm1;
