@@ -738,6 +738,7 @@ function OnSelChangeDevice()
 	
 	if (bIsLED) {
 		$("#scenecontent #LedColor").show();
+		$("#scenecontent #LevelDiv").hide();
 	}
 	else {
 		$("#scenecontent #LedColor").hide();
