@@ -37,6 +37,8 @@ Version 1.0.xxxx (December xxth 2013)
 - Fixed: URL encoding in Edit Light/Switch
 - Implemented: Creation of 2 new database parameters in DeviceStatus
 - Implemented: Creation of auto backup folders
+- Fixed: Level dropdown now hidden in Scene/Groups for RGB devices
+- Implemented: Prowl/NMA notification priority (not in Lua/Blockly yet)
 
 Version 1.0.1186 (November 16th 2013)
 - Fixed: rain week log, some top legend values did not show on the chart
